# flappy_bird_cpp

./: .gitignore  CMakeLists.txt  README.md
data/: best_bird.json
src/: bird.h  flappy_bird.cpp  minesweeper.cpp  pipe.h
src/neuralnetwork/: matrix.h  nn.h
src/p5/: application.h  qtcanvas.cpp  qtcanvas.h
test/: test_matrix.cpp  test_nn.cpp
